SSR y aside con animación entre paginas

--- a/src/components/IconForm.astro
+++ b/src/components/IconForm.astro
@@ -10,7 +10,7 @@ else if (type == "moon") iconClass = "theme_icon"
 
 <img
     class=`icon ${iconClass}`
-    src=`src/icons/${type}.svg`
+    src=`/src/icons/${type}.svg`
     id={id}
     alt="icono"
     width="18"
