--- a/src/components/BtnTheme.astro
+++ b/src/components/BtnTheme.astro
@@ -1,5 +1,5 @@
 ---
-import IconForm from "./IconForm.astro";
+import IconForm from "@components/IconForm.astro";
 ---
 
 <div id="btnTheme__box" transition:persist>
@@ -58,12 +58,12 @@ import IconForm from "./IconForm.astro";
         if (isLight) {
             document
                 .getElementById("theme")
-                .setAttribute("src", "src/icons/sun.svg");
+                .setAttribute("src", "/src/icons/sun.svg");
             localStorage.setItem("theme", "light");
         } else {
             document
                 .getElementById("theme")
-                .setAttribute("src", "src/icons/moon.svg");
+                .setAttribute("src", "/src/icons/moon.svg");
             localStorage.setItem("theme", "dark");
         }
     };
@@ -94,13 +94,13 @@ import IconForm from "./IconForm.astro";
             document.documentElement.classList.add("light");
             document
                 .getElementById("theme")
-                .setAttribute("src", "src/icons/sun.svg");
+                .setAttribute("src", "/src/icons/sun.svg");
         }
 
         window.localStorage.setItem("theme", theme);
     });
 </script>
-
+<!-- AL recargar la página -->
 <script is:inline>
     const theme = (() => {
         if (
@@ -121,7 +121,7 @@ import IconForm from "./IconForm.astro";
         document.documentElement.classList.add("light");
         document
             .getElementById("theme")
-            .setAttribute("src", "src/icons/sun.svg");
+            .setAttribute("src", "/src/icons/sun.svg");
     }
 
     window.localStorage.setItem("theme", theme);
