--- a/src/components/BtnColor.astro
+++ b/src/components/BtnColor.astro
@@ -2,7 +2,7 @@
 const { text, type } = Astro.props;
 ---
 
-<button class=`btn ${type}` id="submit" type="submit">{text}</button>
+<button class=`btn ${type}`>{text}</button>
 
 <style>
     button.btn {
