--- a/src/pages/broker.astro
+++ b/src/pages/broker.astro
@@ -8,7 +8,7 @@ const token = Astro.cookies.get('jwt').value
 
 ---
 
-<Layout title="BrokerView | Broker" isForm={false}>
+<Layout title="BrokerView | Broker" hasFooter={false}>
     <MenuToggle />
     <main>
         <h1>Broker</h1>
