--- a/src/pages/cuenta.astro
+++ b/src/pages/cuenta.astro
@@ -9,7 +9,7 @@ const token = Astro.cookies.get('jwt').value
 
 ---
 
-<Layout title="BrokerView | Cuenta" isForm={false}>
+<Layout title="BrokerView | Cuenta" hasFooter={false}>
     <MenuToggle />
     <main>
         <h1>Cuenta</h1>
