--- a/src/pages/fondo.astro
+++ b/src/pages/fondo.astro
@@ -8,7 +8,7 @@ const token = Astro.cookies.get('jwt').value
 
 ---
 
-<Layout title="BrokerView | Fondo" isForm={false}>
+<Layout title="BrokerView | Fondo" hasFooter={false}>
     <MenuToggle />
     <main>
         <h1>Fondo</h1>
