--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import TextLink from "@sections/TextLink.astro";
 export const prerender = true;
 ---
 
-<Layout title="BrokerView" isForm={true}>
+<Layout title="BrokerView" hasFooter={true}>
 	<main>
 		<h1 class="title">Ingresar</h1>
 
