--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -6,7 +6,7 @@ import Layout from "@layouts/Layout.astro";
 export const prerender = true;
 ---
 
-<Layout title="BrokerView | Registro" isForm={true}>
+<Layout title="BrokerView | Registro" hasFooter={true}>
     <main>
         <h1 class="title">Registrarse</h1>
 
