--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,10 +9,10 @@ import "@fontsource/russo-one";
 
 interface Props {
 	title: string;
-	isForm: boolean | undefined;
+	hasFooter: boolean;
 }
 
-const { title, isForm } = Astro.props;
+const { title, hasFooter } = Astro.props;
 
 const optionsTheme = ["red", "green"];
 const randomIndex = Math.floor(Math.random() * optionsTheme.length);
@@ -34,8 +34,8 @@ const color = optionsTheme[randomIndex];
 		<title>{title}</title>
 	</head>
 	<body class={color}>
-		<Navbar isForm={isForm}/>
+		<Navbar hasFooter={hasFooter}/>
 		<slot />
-		{isForm && <Footer />}
+		{hasFooter && <Footer />}
 	</body>
 </html>
