--- a/src/pages/inicio.astro
+++ b/src/pages/inicio.astro
@@ -9,7 +9,7 @@ const token = Astro.cookies.get('jwt').value
 
 ---
 
-<Layout title="BrokerView | Inicio" isForm={false}>
+<Layout title="BrokerView | Inicio" hasFooter={false}>
     <MenuToggle />
     <main>
         <TitlesWelcome />
