--- a/src/pages/broker.astro
+++ b/src/pages/broker.astro
@@ -4,8 +4,9 @@ import MenuToggle from "@sections/MenuToggle.astro";
 
 import "@styles/main-content.css";
 
-const token = Astro.cookies.get('jwt').value
-
+if (Astro.cookies.get("isLogin").value != "true") {
+    return Astro.redirect("/");
+}
 ---
 
 <Layout title="BrokerView | Broker" hasFooter={false}>
