--- a/src/pages/fondo.astro
+++ b/src/pages/fondo.astro
@@ -4,7 +4,9 @@ import MenuToggle from "@sections/MenuToggle.astro";
 
 import "@styles/main-content.css";
 
-const token = Astro.cookies.get('jwt').value
+if (Astro.cookies.get("isLogin").value != "true") {
+    return Astro.redirect("/");
+}
 
 ---
 
