--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,9 @@ import Layout from "@layouts/Layout.astro";
 import Form from "@sections/Form.astro";
 import TextLink from "@sections/TextLink.astro";
 
-export const prerender = true;
+if (Astro.cookies.get("isLogin").value == "true") {
+    return Astro.redirect("/inicio");
+}
 ---
 
 <Layout title="BrokerView" hasFooter={true}>
