--- a/src/pages/cuenta.astro
+++ b/src/pages/cuenta.astro
@@ -5,29 +5,16 @@ import DataAccount from "@components/DataAccount.astro";
 
 import "@styles/main-content.css";
 
-// import { GetUser } from "src/scripts/usersAPI";
-
-// if (Astro.cookies.get("isLogin").value != "true") {
-//     return Astro.redirect("/");
-// }
-
-const token = Astro.cookies.get("jwt").value;
-// const user = await GetUser(token);
-
-
-// if (user.detail == 'No autorizado'){
-//     Astro.cookies.set("isLogin",'false');
-//     return Astro.redirect('/')
-// }
-
-let user = {"username":"juan","name":"manuel"}
+if (!Astro.cookies.get("jwt")) {
+    return Astro.redirect("/");
+}
 ---
 
 <Layout title="BrokerView | Cuenta" hasFooter={false}>
     <MenuToggle />
     <main>
         <h1>Cuenta</h1>
-        <DataAccount user={user} />
+        <DataAccount />
     </main>
 </Layout>
 <style>
