--- a/src/pages/fondo.astro
+++ b/src/pages/fondo.astro
@@ -4,10 +4,9 @@ import MenuToggle from "@sections/MenuToggle.astro";
 
 import "@styles/main-content.css";
 
-if (Astro.cookies.get("isLogin").value != "true") {
+if (!Astro.cookies.get("jwt")) {
     return Astro.redirect("/");
 }
-
 ---
 
 <Layout title="BrokerView | Fondo" hasFooter={false}>
