--- a/src/components/BackgroundColors.astro
+++ b/src/components/BackgroundColors.astro
@@ -59,6 +59,11 @@ const { type } = Astro.props;
             z-index: 50;
             padding: 3px;
         }
+        &.modal-logout{ 
+            width: 70%;
+            max-width: 500px; 
+            padding: 3px;
+        }
 
         &::before{
             content: "";
