--- a/src/components/DataAccount.astro
+++ b/src/components/DataAccount.astro
@@ -2,12 +2,11 @@
 import CardDataAccount from "@components/CardDataAccount.astro";
 import BackgroundColors from "@components/BackgroundColors.astro";
 
-const randomIndex = Math.floor(Math.random() * 10);
+// import { GetUser } from "src/scripts/usersAPI";
 
-const res = await fetch('https://jsonplaceholder.typicode.com/users')
-const data = await res.json()
-let user = data[randomIndex];
-
+// const token = Astro.cookies.get("jwt").value;
+// const user = await GetUser(token);
+const user = {"username":"","name":"","lastname":"","email":""}
 ---
 
 <BackgroundColors type="data-account">
@@ -16,14 +15,13 @@ let user = data[randomIndex];
             <h3>Perfil</h3>
             <CardDataAccount key="Usuario" value={user.username} />
             <CardDataAccount key="Nombre" value={user.name} />
-            <CardDataAccount key="Apellidos" value="Rodriguez Martinez" />
+            <CardDataAccount key="Apellidos" value={user.lastname} />
             <CardDataAccount key="Correo" value={user.email} />
             <CardDataAccount key="Contraseña" value="Contraseña$" />
         </li>
         <li>
             <h3>Configuración</h3>
             <CardDataAccount key="Moneda" value="USDT" />
-            <CardDataAccount key="" value="Cerrar Sesión" />
         </li>
     </ul>
 </BackgroundColors>
@@ -37,7 +35,7 @@ let user = data[randomIndex];
         width: 100%;
         height: 100%;
 
-        gap: 2rem;
+        gap: 1.5rem;
         margin: auto;
         padding: 10px;
         border-radius: 8px;
