--- a/src/pages/broker.astro
+++ b/src/pages/broker.astro
@@ -4,7 +4,7 @@ import MenuToggle from "@sections/MenuToggle.astro";
 
 import "@styles/main-content.css";
 
-if (Astro.cookies.get("isLogin").value != "true") {
+if (!Astro.cookies.get("jwt")) {
     return Astro.redirect("/");
 }
 ---
