--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "@layouts/Layout.astro";
 import Form from "@sections/Form.astro";
 import TextLink from "@sections/TextLink.astro";
 
-if (Astro.cookies.get("isLogin").value == "true") {
+if (Astro.cookies.get("jwt")) {
     return Astro.redirect("/inicio");
 }
 ---
