--- a/src/sections/MenuToggle.astro
+++ b/src/sections/MenuToggle.astro
@@ -1,5 +1,6 @@
 ---
 import LinkPage from "@components/LinkPage.astro";
+import ModalLogout from "@components/ModalLogout.astro";
 ---
 
 <div id="background__menu-toggle"></div>
@@ -53,7 +54,20 @@ import LinkPage from "@components/LinkPage.astro";
             >
         </LinkPage>
     </ul>
+    <LinkPage page="logout">
+        <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 512 512"
+            width="23"
+            height="23"
+            ><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+            <path
+                d="m378 106 123 123a39 39 0 0 1 0 54L378 406a34 34 0 0 1-58-24v-62H192c-18 0-32-14-32-32v-64c0-18 14-32 32-32h128v-62a34 34 0 0 1 58-24zM160 96H96c-18 0-32 14-32 32v256c0 18 14 32 32 32h64a32 32 0 1 1 0 64H96c-53 0-96-43-96-96V128c0-53 43-96 96-96h64a32 32 0 1 1 0 64z"
+            ></path></svg
+        >
+    </LinkPage>
 </aside>
+<ModalLogout/>
 
 <style>
     #background__menu-toggle {
@@ -61,7 +75,7 @@ import LinkPage from "@components/LinkPage.astro";
         display: none;
         width: 100%;
         height: 100vh;
-        z-index: 190;
+        z-index: 100;
         backdrop-filter: blur(5px);
 
         &.appear {
@@ -72,17 +86,21 @@ import LinkPage from "@components/LinkPage.astro";
         }
     }
     #menu-toggle {
-        display: none;
         position: fixed;
-
-        justify-content: start;
+        display: none;
+        justify-content: space-between;
         flex-direction: column;
-        gap: 2rem;
+        
         padding-top: 2rem;
+        padding-bottom: 1rem;
         padding-left: 1rem;
-        height: 100vh;
+
+        height: calc(100% - 55px);
         width: 50%;
-        z-index: 210;
+        z-index: 150;
+
+        transition: width .3s ease;
+
         background-color: #121212dd;
 
         ul {
@@ -118,9 +136,9 @@ import LinkPage from "@components/LinkPage.astro";
             }
         }
         #menu-toggle {
-            top: 55.5px;
 
             display: flex;
+
             width: 50px;
             padding-left: 5px;
             padding-top: 1rem;
@@ -135,7 +153,6 @@ import LinkPage from "@components/LinkPage.astro";
                 svg ~ p {
                     display: block;
                 }
-                
             }
         }
     }
@@ -143,9 +160,9 @@ import LinkPage from "@components/LinkPage.astro";
 <script>
     let newWidth = window.innerWidth;
     if (newWidth < 666) {
-        const link = document.querySelectorAll(".link-page");
+        const links = document.querySelectorAll(".link-page a");
 
-        link.forEach((link) => {
+        links.forEach((link) => {
             link.addEventListener("click", () => {
                 window.location.href = `/${link.id}`;
             });
