--- a/src/styles/main-content.css
+++ b/src/styles/main-content.css
@@ -3,6 +3,7 @@ main{
     --margin-open: 200px;
 
     margin-left: var(--margin-close);
+    transition: margin-left .3s ease;
 
     .expanded ~ & {
         margin-left: var(--margin-open);
