Mejorar en el aside mobile y en el hamburger

--- a/src/components/CardDataAccount.astro
+++ b/src/components/CardDataAccount.astro
@@ -70,7 +70,7 @@ const isPassword = key == "Contraseña";
 
             input {
                 height: 19px;
-                width: min-content;
+                width: calc(100% - 100px);
 
                 border: none;
                 color: inherit;
