--- a/src/sections/MenuToggle.astro
+++ b/src/sections/MenuToggle.astro
@@ -73,6 +73,7 @@ import ModalLogout from "@components/ModalLogout.astro";
     #background__menu-toggle {
         position: fixed;
         display: none;
+
         width: 100%;
         height: 100vh;
         z-index: 100;
@@ -82,14 +83,17 @@ import ModalLogout from "@components/ModalLogout.astro";
             display: flex;
         }
         &.appear ~ #menu-toggle {
-            display: flex;
+            transform: translateX(200%);
         }
     }
     #menu-toggle {
         position: fixed;
-        display: none;
+        display: flex;
         justify-content: space-between;
         flex-direction: column;
+
+        left: -100%;
+        transition: transform .5s ease;
         
         padding-top: 2rem;
         padding-bottom: 1rem;
@@ -98,8 +102,6 @@ import ModalLogout from "@components/ModalLogout.astro";
         height: calc(100% - 55px);
         width: 50%;
         z-index: 150;
-
-        transition: width .3s ease;
 
         background-color: #121212dd;
 
@@ -131,15 +133,13 @@ import ModalLogout from "@components/ModalLogout.astro";
             &.appear {
                 display: none;
             }
-            &.expanded ~ #menu-toggle {
-                display: flex;
-            }
         }
         #menu-toggle {
-
-            display: flex;
+            left: 0; 
 
             width: 50px;
+            transition: width .1s ease;
+
             padding-left: 5px;
             padding-top: 1rem;
 
@@ -157,15 +157,3 @@ import ModalLogout from "@components/ModalLogout.astro";
         }
     }
 </style>
-<script>
-    let newWidth = window.innerWidth;
-    if (newWidth < 666) {
-        const links = document.querySelectorAll(".link-page a");
-
-        links.forEach((link) => {
-            link.addEventListener("click", () => {
-                window.location.href = `/${link.id}`;
-            });
-        });
-    }
-</script>
