--- a/src/components/forms/FormLogin.astro
+++ b/src/components/forms/FormLogin.astro
@@ -33,19 +33,23 @@ import "src/styles/forms.css";
 	</p>
 </div>
 
+<p class="form__error-send">El usuario no existe</p>
+
 <div class="form__group">
 	<BtnColor text="INGRESAR" type="form" />
 </div>
 <style>
-	p {
-		margin-top: 0.5rem;
-		font-size: 0.8rem;
-		text-align: end;
+	div {
+		p {
+			margin-top: 0.5rem;
+			font-size: 0.8rem;
+			text-align: end;
 
-		a {
-			text-decoration: none;
-			color: inherit;
-			letter-spacing: 1px;
+			a {
+				text-decoration: none;
+				color: inherit;
+				letter-spacing: 1px;
+			}
 		}
 	}
 </style>
