--- a/src/components/forms/FormSignin.astro
+++ b/src/components/forms/FormSignin.astro
@@ -28,6 +28,9 @@ import "src/styles/forms.css";
     text="Confirmar contraseña:"
     textError="Las contraseñas no coinciden"
 />
+
+<p class="form__error-send">Su nombre no se encuentra registrado en BrokerView</p>
+
 <div class="form__group">
     <BtnColor text="INGRESAR" type="form" />
 </div>
