--- a/src/sections/Form.astro
+++ b/src/sections/Form.astro
@@ -50,7 +50,11 @@ const typeForm = type == "login" ? "form-login" : "form-signin";
                     display: none;
                 }
 
-                & .form__group:nth-child(7) {
+                & .form__error-send{
+                    grid-column: span 2;
+                }
+
+                & .form__group:nth-child(8) {
                     grid-column: span 2;
                 }
             }
