DataAccount actualizado con componentes web

--- a/src/components/BackgroundColors.astro
+++ b/src/components/BackgroundColors.astro
@@ -64,6 +64,9 @@ const { type } = Astro.props;
             max-width: 500px; 
             padding: 3px;
         }
+        &.data-account{
+            margin: auto;
+        }
 
         &::before{
             content: "";
