--- a/src/components/FundData.astro
+++ b/src/components/FundData.astro
@@ -1,10 +1,10 @@
-<astro-heart>
+<astro-chart>
   <h1>Fondo</h1>
 
   <div>
     <canvas id="fund"></canvas>
   </div>
-</astro-heart>
+</astro-chart>
 <style>
   astro-heart{
     width: 100%;
@@ -19,7 +19,7 @@
   import Chart from "chart.js/auto";
   import { GetDataFund } from "@scripts/fundAPI";
 
-  class AstroHeart extends HTMLElement {
+  class AstroChart extends HTMLElement {
     constructor() {
       super();
 
@@ -67,5 +67,5 @@
     }
   }
 
-  customElements.define("astro-heart", AstroHeart);
+  customElements.define("astro-chart", AstroChart);
 </script>
