DataAccount y FundData mejorados

--- a/src/components/BtnTheme.astro
+++ b/src/components/BtnTheme.astro
@@ -72,7 +72,7 @@ import IconForm from "@components/IconForm.astro";
         .getElementById("btnTheme__box")
         .addEventListener("click", handleToggleClick);
 </script>
-
+<!-- Cambiar el tema con las ViewTransitions -->
 <script>
     document.addEventListener("astro:after-swap", () => {
         const theme = (() => {
